# fast-dodging

./: README.md
sort_ros/: CMakeLists.txt  README.md  package.xml
sort_ros/include/: Hungarian.h  Sort.h  SortRect.h  SortRos.h  Tracker.h  TrackerState.h
sort_ros/launch/: rviz_sort.rviz  sort_ros.launch
sort_ros/obj_state_msgs/: CMakeLists.txt  package.xml
sort_ros/obj_state_msgs/msg/: State.msg
sort_ros/src/: Hungarian.cpp  Sort.cpp  SortRect.cpp  SortRos.cpp  Tracker.cpp  TrackerState.cpp  main.cpp
yolo_fastest_ros/ncnn/: CMakeLists.txt  build.sh  demo.cpp  package.xml
yolo_fastest_ros/ncnn/config/: yolo_ros.yaml
yolo_fastest_ros/ncnn/include/ncnn/: platform.h
yolo_fastest_ros/ncnn/launch/: yolo_ros.launch
yolo_fastest_ros/ncnn/lib/cmake/ncnn/: ncnn.cmake
yolo_fastest_ros/ncnn/lib/pkgconfig/: ncnn.pc
yolo_fastest_ros/ncnn/model/: ball_best-opt.param  yolo-fastestv2.param  yolo_ball.param
yolo_fastest_ros/ncnn/src/: rosnode_yolo.cpp  visualize.cpp  yolo-fastestv2.cpp
yolo_fastest_ros/ncnn/src/include/: yolo-fastestv2.h
yolo_fastest_ros/target_ros_msgs/: CMakeLists.txt  package.xml
yolo_fastest_ros/target_ros_msgs/action/: CheckForObjects.action
yolo_fastest_ros/target_ros_msgs/msg/: BoundingBox.msg
