<?xml version="1.0"?>
<package format="2">

  <name>sort_ros</name>
  <version>0.1.0</version>
  <description>3D-SORT package for ROS</description>
  <license>GPLv3</license>

  <url type="website">https://github.com/arclab-hku/ball_tracking</url>
  <author email="minghao0@connect.hku.hk">Michael-Lu</author>
  <maintainer email="minghao0@connect.hku.hk">Michael-Lu</maintainer>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>message_filters</build_depend>
  <build_depend>cv_bridge</build_depend>
  <build_depend>target_ros_msgs</build_depend>
  <build_depend>obj_state_msgs</build_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <build_export_depend>message_filters</build_export_depend>
  <build_export_depend>cv_bridge</build_export_depend>
  <build_depend>message_generation</build_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>cv_bridge</exec_depend>
  <exec_depend>message_filters</exec_depend>
  <exec_depend>message_runtime</exec_depend>

</package>
